fix: [Authenticated landing] Adjust spacing list spacing

--- a/src/pages/AuthenticatedLanding/Landing.less
+++ b/src/pages/AuthenticatedLanding/Landing.less
@@ -19,7 +19,7 @@
   }
 
   .institution-list {
-    margin-top: 2em;
+    margin-top: 15px;
 
     .cf-icon-svg {
       margin-right: 5px;
